<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragments.recipe.bottomsheet.RecipesBottomSheet">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/meal_type"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/mealTypeScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/mealTypeChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true"
                    >

                    <com.google.android.material.chip.Chip
                        android:id="@+id/mainCourseChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_course"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/sideDishChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/side_dish"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/dessertChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dessert"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/appetizerChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appetizer"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/saladChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salad"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/breadChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bread"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/breakfastChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/soupChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soup"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/beverageChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beverage"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/sauceChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sauce"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/marinadeChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marinade"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/fingerFoodChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finger_food"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/snackChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack"
                        />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>