<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/recipeFragment">

    <fragment
        android:id="@+id/recipeFragment"
        android:name="com.example.foodrecipeapp.ui.fragments.recipe.RecipeFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipe" />
    <fragment
        android:id="@+id/favoriteRecipeFragment"
        android:name="com.example.foodrecipeapp.ui.fragments.favorite.FavoriteRecipeFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorite_recipe" />
    <fragment
        android:id="@+id/jokesFragment"
        android:name="com.example.foodrecipeapp.ui.fragments.jokes.JokesFragment"
        android:label="@string/jokes"
        tools:layout="@layout/fragment_jokes" />
</navigation>